using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Tags : MonoBehaviour
{
    //Animations player
    public static readonly string AnimasiMove = "AnimasiMove";
    public static readonly string Jump = "Jump";
    public static readonly string DoubleJump= "DoubleJump";

    //Object Resources
    public static readonly string TextLeaderboard = "TextLeaderboard";
}
